==================== 2.19.92 ====================

==================== 2.19.6 ====================

2007-07-26  Jaap Haitsma  <jaap@haitsma.org>

	* GNOME_ClockApplet.xml:
	Use gtk-about icon i.s.o. deprectated gnome-stock-about
	Fixes bug #457148

2007-07-18  Pascal Terjan  <pterjan@linuxfr.org>

	* timezone.glade: Set correct response_id

2007-07-18  Pascal Terjan  <pterjan@linuxfr.org>

	* tz.c: (tz_get_system_timezone): fix a crash when /etc/localtime is
	not a hardlink

2007-07-11  Vincent Untz  <vuntz@gnome.org>

	* tz.c: (tz_build_db), (tz_get_system_timezone_solaris): trivial fixes
	for compilation on Solaris. Fix bug #455921.
	Patch by Damien Carbery <damien.carbery@sun.com>

2007-07-11  Vincent Untz  <vuntz@gnome.org>

	* timezone.glade: don't mark icons as translatable (bug in glade-3)
	Fix bug #455864. Patch by Luca Ferretti <elle.uca@libero.it>

2007-07-11  Vincent Untz  <vuntz@gnome.org>

	* e-map/Makefile.am: add -fPIC
	Fix bug #455034. Thanks Saleem Abdulrasool <compnerd@gentoo.org>

2007-07-11  Vincent Untz  <vuntz@gnome.org>

	* e-map/e-map.c: (e_map_realize), (e_map_size_allocate),
	(e_map_remove_point), (update_and_paint), (load_map_background),
	(update_render_pixbuf), (zoom_in_smooth), (zoom_in), (zoom_out):
	sync with gnome-system-tools

==================== 2.19.5 ====================

2007-07-08  Vincent Untz  <vuntz@gnome.org>

	* Makefile.am: dist the glade file

2007-07-07  Vincent Untz  <vuntz@gnome.org>

	* clock.c: (display_about_dialog): use program-name instead of name
	property for GtkAboutDialog.
	Fix bug #438903.
	* tz.c: remove useless include

2007-07-06  Vincent Untz  <vuntz@gnome.org>

	* clock-utils.c: include config.h
	Fix bug #454299 (12-hour setting not working anymore)
	* clock.c: remove useless include
	* timezone.glade: add a shadow for the map

2007-07-05  Vincent Untz  <vuntz@gnome.org>

	Add support for timezones. This needs some more work and testing on